--- a/styles.css
+++ b/styles.css
@@ -203,12 +203,13 @@ fieldset {
 
   .form-top label {
     font-size: 15px;
+    flex-basis: 68%;
   }
 
   .form-top input {
-    position: absolute;
+    /* position: absolute; */
     right: 25%;
-    width: 27%;
+    width: 107%;
     margin-top: 12px;
   }
 
@@ -216,15 +217,17 @@ fieldset {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
+    justify-content: flex-start;
   }
 
   .form-top select {
     /* position: absolute; */
-    width: 100%;
+    width: 107%;
     margin-bottom: 0px;
-    margin-left: 30.3%;
-    margin-right: -5px;
+    margin-left: 0%;
+    margin-right: 0%;
     box-sizing: content-box;
+    margin-top: 9px;
   }
 
   /* .form-top select {
@@ -235,13 +238,13 @@ fieldset {
   } */
 
   #input-zip {
-    margin-top: 9%;
+    margin-top: 7.5%;
   }
 
   #zip-code {
-    width: 8%;
-    right: 19rem;
-    margin-top: 28px;
+    width: 35%;
+    margin-top: 18px;
+    margin-right: 40%;
   }
 
   .section-1 h1 {
@@ -284,6 +287,7 @@ fieldset {
   .button {
     padding: 9px;
     margin-top: 12px;
+    width: 98.5%;
   }
 
   footer {
